Added default bg color

--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,9 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Sandbox - CodeSandbox</title><link rel="manifest" href="/manifest.json"><link href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
-<style>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Frontend.FYI Sandbox (by the epic CodeSandbox team!)</title><link rel="manifest" href="/manifest.json"><link href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
+<style>                                                                                                                                                                                                                                              
+:root {
+  background: #131018;
+}
+
 svg {
 background: transparent;
 }
