--- a/www/index.html
+++ b/www/index.html
@@ -3,5 +3,29 @@
 :root {
   background: #131018;
 }
+
+.loading::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  width: 48px;
+  height: 48px;
+  border: 5px solid #FFF;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: loading-spinner-rotation 1s linear infinite;
+}
+
+@keyframes loading-spinner-rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
+  
 </style>
-<link rel="mask-icon" href="/csb-ios.svg" color="#fff"><script src="/static/browserfs12/browserfs.min.js" type="text/javascript"></script><script>window.process=BrowserFS.BFSRequire("process"),window.Buffer=BrowserFS.BFSRequire("buffer").Buffer</script></head><body><div id="csb-loading-screen"></div><script src="/static/js/vendors~sandbox.311f7d00a.chunk.js" crossorigin="anonymous"></script><script src="/static/js/default~sandbox~sandbox-startup.103980746.chunk.js" crossorigin="anonymous"></script><script src="/static/js/sandbox.ad5023824.js" crossorigin="anonymous"></script><script src="/static/js/vendors~sandbox-startup.ca8a95b40.chunk.js" crossorigin="anonymous"></script><script src="/static/js/sandbox-startup.e6d191957.js" crossorigin="anonymous"></script></body></html>
+<link rel="mask-icon" href="/csb-ios.svg" color="#fff"><script src="/static/browserfs12/browserfs.min.js" type="text/javascript"></script><script>window.process=BrowserFS.BFSRequire("process"),window.Buffer=BrowserFS.BFSRequire("buffer").Buffer</script></head><body><div id="csb-loading-screen" class="loading"></div><script src="/static/js/vendors~sandbox.311f7d00a.chunk.js" crossorigin="anonymous"></script><script src="/static/js/default~sandbox~sandbox-startup.103980746.chunk.js" crossorigin="anonymous"></script><script src="/static/js/sandbox.ad5023824.js" crossorigin="anonymous"></script><script src="/static/js/vendors~sandbox-startup.ca8a95b40.chunk.js" crossorigin="anonymous"></script><script src="/static/js/sandbox-startup.e6d191957.js" crossorigin="anonymous"></script></body></html>
