--- a/www/index.html
+++ b/www/index.html
@@ -4,12 +4,17 @@
   background: #131018;
 }
 
+.loading {
+  width: 100%;
+  height: 100dvh;
+}
+
 .loading::before {
   content: '';
   position: absolute;
   inset: 0;
-  width: 48px;
-  height: 48px;
+  width: 16px;
+  height: 16px;
   border: 5px solid #FFF;
   border-bottom-color: transparent;
   border-radius: 50%;
